# linux

./: .gitmodules  header_file.h  tool.py
.github/workflows/: mdio.yml  test.yml
C_call_Python/: ccallpMain.c  make.sh
HISI/DTS_test/: .gitignore  Makefile
HISI/ioremap/: Makefile  ioremap_test.c
HISI/mm/: Makefile
HISI/notifier/: Makefile  main.c
HISI/trace_point/: main.c
RV1126/DHT11/: Makefile
RV1126/rockchip_gpio/: .board_ctrl.ko.cmd  .board_ctrl.mod.o.cmd  .board_ctrl.o.cmd  Makefile  board_ctrl.c  board_ctrl.h  board_ctrl.ko
SSD268/regmap_test/: hello.ko
SSD268/regmap_test_spi/: .hello.ko.cmd  .hello.o.cmd
SSD268/spi_async/: Makefile  main.c
SSD268/task_struct/: Makefile
SSD268/workqueue/: Makefile  main.c
app_lianxi/C_call_Python/: ccallp.c  ccallp.h  ccallp.py
app_lianxi/IPC_test/: server.c
app_lianxi/alsa-lib_test/: CMakeLists.txt  test.cpp
app_lianxi/c-smart-pointers/: Makefile  c-smart-pointers.c
app_lianxi/cpp_helloworld/: hello_world.cpp
app_lianxi/cpp_lianxi/: CMakeLists.txt  Makefile
app_lianxi/cut_file/: Makefile  main.c
app_lianxi/dbus_test/: Makefile  (+3 more)
c-smart-pointers/: c-smart-pointers.h  main.c
cpio_tool/: Makefile  gen_init_cpio.c  gen_initramfs_list.sh
driver_lianxi/: Makefile.param
hash_test/: BasicHashTable.cpp  Makefile  list.c  list.h  main.cpp
itop4412_linux2.6/: my_driver.h
libIpcUtils/: Makefile  libIpcUtils.h  server.c
libevent/: readme
pthread_pool/: dbgout.h  pthread_pool.h
rtsp_lib/: Makefile  demo.cfg  rtsp_demo.c
sqlite/: Makefile  blob_test.c
usb_reset/: Makefile
(+132 files in other folders)
